[gd_scene load_steps=2 format=3 uid="uid://btkoy6r8d4giw"]

[ext_resource type="Script" uid="uid://ds5wvb5brwx6u" path="res://ui/server_selection.gd" id="1_n1u7o"]

[node name="ServerSelection" type="Node2D"]
script = ExtResource("1_n1u7o")

[node name="ServerEdit" type="LineEdit" parent="."]
offset_left = 100.0
offset_top = 150.0
offset_right = 700.0
offset_bottom = 203.0
theme_override_font_sizes/font_size = 32

[node name="BackBtn" type="Button" parent="."]
offset_left = 20.0
offset_top = 530.0
offset_right = 113.0
offset_bottom = 583.0
theme_override_font_sizes/font_size = 32
text = "BACK"

[node name="ConnectBtn" type="Button" parent="."]
offset_left = 320.0
offset_top = 225.0
offset_right = 480.0
offset_bottom = 278.0
theme_override_font_sizes/font_size = 32
text = "CONNECT"

[node name="RecentLabel" type="Label" parent="."]
offset_left = 420.0
offset_top = 456.0
offset_right = 770.0
offset_bottom = 583.0
text = "F1. ...
F2. ...
F3. ...
F4. ...
F5. ... "
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="BackBtn" to="." method="_on_back_btn_pressed"]
[connection signal="pressed" from="ConnectBtn" to="." method="_on_connect_btn_pressed"]
